fixed more spacing issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,10 @@
-html, body {
+html {
   height: 100%;
 }
 
-#hook { height: 100%; }
-.container {height: 100%; }
+body, #hook, .container {
+  height: inherit; 
+}
 
 body { 
   font-family: Helvetica Neue, sans-serif;
@@ -43,7 +44,7 @@ h1 {
 } 
 
 .sidebar {
-  width: 25%;
+  width: 22%;
 
   background-color: #CFD1B5;
   border-right: 4px solid #666060;
@@ -102,7 +103,7 @@ input[type="text"]:focus {
 .current {
   display: flex; flex-direction: column;
 
-  width: 70%;
+  width: 77%;
   height: 88.5%;
   margin: 0px;
   font-size: 15em;
@@ -119,6 +120,7 @@ input[type="text"]:focus {
 .timer {
   padding-left: 35px;
   padding-right: 35px;
+  margin-bottom: 135px;
   border-radius: 10px;
 }
 
